--- a/desafio/css/styles.css
+++ b/desafio/css/styles.css
@@ -63,19 +63,6 @@ body{
     border-right: 0px;  
     outline-width: 0;
 }
-
-#btn-save{
-    background: var(--color-orange);
-    width: 100px;
-    height: 30px;
-    border: 0px solid var(--color-orange);
-    border-radius: 5px;
-    color: var(--color-white);
-    weight: 600;
-    outline-width: 0;
-    cursor: pointer;
-}
-
 /* TABELA */
 
 .table{
@@ -100,7 +87,12 @@ td, th{
     border-radius: 8px;
     align-items:center;
     padding:10px;
+    text-align: center;
+}
+td{
+    text-align: left;
 }
 .theader{
     font-weight: 600;
+    font-size: 1.5rem;
 }
