--- a/desafio/css/styles.css
+++ b/desafio/css/styles.css
@@ -19,16 +19,16 @@ html, body, .container{
     height: 100%;
     display: flex;
     flex-direction: column;
+    
 }
 
 body{
     background: linear-gradient(to right, #ffa83d 0%, #ffa83d 55%,
     #ff981a 70%, #f58700 100%);
-    margin: 0;
     font-family: 'Source Sans Pro';
     font-weight: 400;
-    align-items: center;
     font-size: 1.1rem;
+    align-items: center;
 }
 
 /* CONTAINER PAI */
@@ -39,7 +39,7 @@ body{
     padding:2%;
     border: 0px solid var(--color-orange);
     border-radius: 20px;
-    height: 80%;
+    height:auto;
     width: 80%;
     align-items: center;
     box-shadow: 0px 0px 80px -31px rgba(0,0,0,0.75);
@@ -96,13 +96,15 @@ th{
     font-size: 1.5rem;
 }
 
-button{
+span{
     background: var(--color-orange);
-    width: 100px;
+    width: 50px;
     height: 30px;
     border: 0px solid var(--color-orange);
     border-radius: 5px;
     color: var(--color-white);
-    weight: bolder;
     outline-width: 0;
+    cursor: pointer;
+    text-align: center;
+    align-items: center;
 }
