--- a/RGB/css/styles.css
+++ b/RGB/css/styles.css
@@ -4,7 +4,6 @@
 /* VARIAVEIS */
 :root {
     --color-white: #FFF;
-    --color-orange: #ffc04c;
   }
   
 /* RESET */
@@ -24,21 +23,67 @@ html, body, .container{
 }
 
 body{
-    background: linear-gradient(to right, rgba(76,76,76,1) 0%, rgba(89,89,89,1) 12%,
-    rgba(102,102,102,1) 25%, rgba(71,71,71,1) 63%, rgba(43,43,43,1) 100%);
+    background-color: #c73e1d;
+    background-image: linear-gradient(315deg, #c73e1d 0%, #a23b72 37%, #2e86ab 100%);
     font-family: 'Source Sans Pro';
-    font-weight: 400;
     font-size: 1.1rem;
     align-items: center;
 }
-.card{
-    background: #fff;
-    width: 900px;
-    height: 300px;
-    align-items: center;
+.container{
     text-align: center;
-    border-radius: 5px;
-    margin-top: 80px;
-    box-shadow: 23px 23px 5px 10px rgba(0,0,0,0.27);
+    margin-top: 40px;
 }
+
+h1{
+    color: var(--color-white);
+    font-size: 2rem;
+    weight: 600;
+}
+
+/*----- CENTRAL CARD -----*/
+
+.card{
+    background: var(--color-white);
+    width: 900px;
+    height: auto;
+    border-radius: 5px;
+    margin-top: 10px;
+    box-shadow: 23px 23px 5px 10px rgba(0,0,0,0.1);
+    text-align: center;
+}
+ .card label, input{
+     margin-top: 40px;
+     align-items: left;
+     width: 200px;
+     weight: 600;  
+ }
+
+ .card r,g,b{
+
+ }
+
+ .number{
+    margin-left: 5px;
+    height: 30px;
+    text-align: center;
+    width: 30px;
+    border: 0px solid;
+    border-bottom: 1px solid #a23b72;
+    background: var(--color-white);
+ }
+
+/*----- SQUARE INSIDE -----*/
+ .body{
+    height: 180px;
+    width: 180px;
+    display: absolute;
+    margin: auto;
+    margin-top:50px;
+    border: 0px solid #FFF;
+    border-radius: 5px;
+    margin-bottom: 30px;
+ }
+
+
+
 
