Modificando cor inicial do quare

--- a/RGB/css/styles.css
+++ b/RGB/css/styles.css
@@ -79,7 +79,7 @@ h1{
     margin: auto;
     margin-top:50px;
     margin-bottom: 30px;
-    border: 0px solid #FFF;
+    border: 1px solid #a23b72;
     border-radius: 8px;
  }
 
