--- a/Desafio/css/styles.css
+++ b/Desafio/css/styles.css
@@ -25,9 +25,10 @@ body{
     box-shadow: 5px 5px 2px 0px #e43f5a;
 }
 h1{
-    font-size: 26px;
-    text-shadow: 4px 4px 2px #1b1b2f;  
-    padding: 10px; 
+    font-size: 2rem;
+    text-shadow: 4px 4px 2px #1b1b2f;
+    padding: 10px;   
+    margin: 10px 0px;
 }
 
 /************ INPUT ************/
@@ -35,7 +36,6 @@ h1{
     display: block;
     width: 100%;
     font-size: 12px;
-    padding: 10px;
     display: inline-block;
     vertical-align: top;
     text-align: left;
@@ -44,11 +44,13 @@ label{
     display: block;
     margin-left: 20px;
     font-size: 1.2rem;
-    text-shadow: 4px 4px 2px #1b1b2f;;  
+    font-weight: 600;
+    text-shadow: 4px 4px 2px #1b1b2f;
+    
 }
 input{
     display: inline-block;
-    margin: 10px 20px;
+    margin: 20px 20px;
     width: 80%;
     background: transparent;
     border: 0px solid #fff;
@@ -56,8 +58,9 @@ input{
     outline-width: 0;
     color: #fff;
 }
-button{
-    width: 12%;
+
+button{   
+    width: 150px;
     height: 30px;
     outline-width: 0;
     background: #e43f5a;
@@ -65,6 +68,8 @@ button{
     box-shadow: 4px 4px 2px #1b1b2f;  
     border: 0px solid #fff;
     border-radius: 10px;
+    font-weight: 600;
+    align-items: center;
 }
 
 /************ BODY ************/
@@ -72,9 +77,16 @@ button{
     display: flex;
     flex-wrap: wrap;
   }
-  
+
+  h2{
+    font-size: 1.2rem;
+    text-shadow: 4px 4px 2px #1b1b2f;  
+    padding: 10px; 
+}
+
   .child {
     padding: 10px; 
+    font-weight: 600;
     background: #1f4068;
     height: auto;
     flex: 0 1 300px;
